[gd_scene load_steps=42 format=2]

[ext_resource path="res://fonts/message_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/header_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/rich_text_siny.gd" type="Script" id=3]
[ext_resource path="res://sound/press_button.wav" type="AudioStream" id=4]
[ext_resource path="res://music/short-drum loop.wav" type="AudioStream" id=5]
[ext_resource path="res://theme/menu_button.tres" type="Theme" id=6]
[ext_resource path="res://theme/button.tres" type="Theme" id=7]
[ext_resource path="res://theme/red_panel.tres" type="Theme" id=8]
[ext_resource path="res://scene/worm/SpawnKinematic.tscn" type="PackedScene" id=9]
[ext_resource path="res://sound/unset_button.wav" type="AudioStream" id=10]
[ext_resource path="res://img/arrow_small.png" type="Texture" id=11]
[ext_resource path="res://img/arrow_small_l.png" type="Texture" id=12]
[ext_resource path="res://material/world1.tres" type="Material" id=13]
[ext_resource path="res://sound/set_button.wav" type="AudioStream" id=14]
[ext_resource path="res://img/textures/concrete.png" type="Texture" id=15]
[ext_resource path="res://script/texture_sampler.gd" type="Script" id=16]
[ext_resource path="res://material/worm_skins/blue.tres" type="Material" id=17]
[ext_resource path="res://img/spinning_egg/0056.png" type="Texture" id=18]
[ext_resource path="res://img/spinning_egg/0012.png" type="Texture" id=19]
[ext_resource path="res://img/spinning_egg/0048.png" type="Texture" id=20]
[ext_resource path="res://img/spinning_egg/0004.png" type="Texture" id=21]
[ext_resource path="res://img/spinning_egg/0008.png" type="Texture" id=22]
[ext_resource path="res://img/spinning_egg/0028.png" type="Texture" id=23]
[ext_resource path="res://img/spinning_egg/0032.png" type="Texture" id=24]
[ext_resource path="res://img/spinning_egg/0036.png" type="Texture" id=25]
[ext_resource path="res://img/spinning_egg/0024.png" type="Texture" id=26]
[ext_resource path="res://img/spinning_egg/0040.png" type="Texture" id=27]
[ext_resource path="res://img/spinning_egg/0016.png" type="Texture" id=28]
[ext_resource path="res://img/spinning_egg/0044.png" type="Texture" id=29]
[ext_resource path="res://img/spinning_egg/0020.png" type="Texture" id=30]
[ext_resource path="res://img/spinning_egg/0052.png" type="Texture" id=31]
[ext_resource path="res://img/spinning_egg/0001.png" type="Texture" id=32]
[ext_resource path="res://script/skin_select.gd" type="Script" id=33]

[sub_resource type="RichTextEffect" id=1]
script = ExtResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "ui_left"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 15
fps = 15.0
frame_0/texture = ExtResource( 32 )
frame_1/texture = ExtResource( 21 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 22 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 19 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 28 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 30 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 26 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 23 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 24 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 25 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 27 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 29 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 20 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 31 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 18 )
frame_14/delay_sec = 0.0

[sub_resource type="InputEventAction" id=7]
action = "ui_right"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="SkinSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 33 )

[node name="Background" type="TextureRect" parent="."]
material = ExtResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
script = ExtResource( 16 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="SpawnKinematic" parent="ViewportContainer/Viewport" instance=ExtResource( 9 )]
material = ExtResource( 17 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 3

[node name="Panel" type="Panel" parent="."]
margin_left = 393.0
margin_top = 18.0
margin_right = 433.0
margin_bottom = 58.0
rect_scale = Vector2( 6, 4.2 )
theme = ExtResource( 8 )

[node name="Skin" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 30.0

[node name="Title" type="RichTextLabel" parent="Skin"]
margin_right = 1024.0
margin_bottom = 45.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]skin select[/center]"
text = "skin select"
fit_content_height = true
custom_effects = [ SubResource( 1 ) ]

[node name="EggRow" type="HBoxContainer" parent="Skin"]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="Skin/EggRow"]
margin_top = 25.0
margin_right = 440.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="Previous" type="Button" parent="Skin/EggRow"]
margin_left = 444.0
margin_right = 476.0
margin_bottom = 64.0
focus_neighbour_right = NodePath("../Next")
focus_mode = 0
theme = ExtResource( 6 )
shortcut = SubResource( 6 )
icon = ExtResource( 12 )

[node name="Spinner" type="TextureRect" parent="Skin/EggRow"]
modulate = Color( 0.13, 0, 0, 1 )
material = ExtResource( 17 )
margin_left = 480.0
margin_right = 544.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 1

[node name="Next" type="Button" parent="Skin/EggRow"]
margin_left = 548.0
margin_right = 580.0
margin_bottom = 64.0
focus_neighbour_left = NodePath("../Previous")
focus_neighbour_right = NodePath("../../../Back")
focus_neighbour_bottom = NodePath("../../../Back")
focus_mode = 0
theme = ExtResource( 6 )
shortcut = SubResource( 8 )
icon = ExtResource( 11 )

[node name="Label2" type="Label" parent="Skin/EggRow"]
margin_left = 584.0
margin_top = 25.0
margin_right = 1024.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="InfoRow" type="HBoxContainer" parent="Skin"]
margin_top = 117.0
margin_right = 1024.0
margin_bottom = 141.0

[node name="Label4" type="Label" parent="Skin/InfoRow"]
margin_top = 5.0
margin_right = 433.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Skin/InfoRow"]
margin_left = 437.0
margin_right = 587.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_fonts/font = ExtResource( 1 )
text = "skin name"
align = 1

[node name="Label3" type="Label" parent="Skin/InfoRow"]
margin_left = 591.0
margin_top = 5.0
margin_right = 1024.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -44.0
margin_right = 12.0
margin_bottom = -16.0
focus_neighbour_top = NodePath("../Skin/EggRow/Previous")
focus_mode = 0
theme = ExtResource( 7 )
shortcut = SubResource( 4 )
text = "back"

[node name="Sounds" type="Node" parent="."]

[node name="PressButton" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -20.0
bus = "UI"

[node name="NavigateForward" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -20.0
bus = "UI"

[node name="NavigateBackward" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = -20.0
bus = "UI"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="Tween" type="Tween" parent="."]
